# algo_info_text_comparison

./: .gitignore  README.md  corpus_analysis_results.json
projet_ia_info/: corpus_analysis_results.json  pyproject.toml
projet_ia_info/projet_ia_info/: generate_texte.py  main.py
