[tool.poetry]
name = "projet-ia-info"
version = "0.1.0"
description = ""
authors = ["ghaliac <ghalia.chaoui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
transformers = "^4.47.0"
numpy = "^2.2.0"
matplotlib = "^3.9.3"
protobuf = "^5.29.1"
nltk = "^3.9.1"
certifi = "^2024.8.30"
scipy = "^1.14.1"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
